# -ProjectComplex

./: .coverage  .gitignore  CMakeLists.txt  CMakePresets.json  HELP.md  README.md  requirements.txt
.github/workflows/: ci.yml  release.yml
config/: app_config.json
py_src/: default_config.json  requirements.txt  result_contract.py  runner.py
py_src/full_distance/: camera_refine.py  coarse_geo_search.py  depth_map.py  depth_training_plots.py  full_distance.py  offline_map_data.py  scene_features.py  validation_eval.py  vehicle_geo_projection.py
py_src/full_distance/examples/: depth_training_history.json
py_src/notebooks/: claster_detect.py  objects_detect.py  rotation_detect.py  vehicle_detect.py
py_src/prototypes/: api.py  cluster_1.py  cluster_3.py
python/: default_config.json  requirements.txt  result_contract.py  runner.py  runner_delete.py
python/full_distance/: full_distance.py
python/notebooks/: claster_detect.py  objects_detect.py  rotation_detect.py  speed_detect.py  vehicle_detect.py
python/prototypes/: api.py  cluster_1.py  cluster_2.py  cluster_3.py  cluster_4.py
qml/: _deploy_imports.qml
resources/: icons.qrc
resources/qml/: MapView.qml
src/: AppConfig.cpp  AppConfig.h  ClustersTab.cpp  ClustersTab.h  FullDistanceTab.cpp  FullDistanceTab.h  MainWindow.cpp  MainWindow.h  MapTab.cpp  MapTab.h  ModelTypes.cpp  ModelTypes.h  RegressionTab.cpp  RegressionTab.h  ResultView.cpp  ResultView.h  RunnerClient.cpp  RunnerClient.h  app.rc  main.cpp
